Update portfolio summary, get quotation end date and other fixes